# floodit-allegro

./: CMakeLists.txt  FindAllegro5.cmake  README.md  config-init.h  config.dad  destroy.h  global.h  init.h  main.c
allegro-shell/: Display.c  Display.h  EventQueue.c  EventQueue.h  FileDialog.c  FileDialog.h
core/: Block.c  Block.h  Menu.c  Menu.h  Scenario.c  Scenario.h  constants.c  constants.h  utils.c  utils.h
mtwist/: mtwist.old  mtwistc.old
shell/: colors.c  colors.h  exceptions.c  exceptions.h  io_utils.c  io_utils.h  utils.c  utils.h
